<resources>
    <string name="str_versionName">0.1_alpha</string>
    <string name="ad_id">ca-app-pub-1840378385159527/7602306553</string>
    <string name="str_pageTitle_main">Device Discovery</string>
    <string name="str_pageTitle_leaderboard">Leaderboard</string>
    <string name="str_pageTitle_foundDevices">Found Devices</string>
    <string name="str_pageTitle_achievements">Achievements</string>
    <string name="str_pageTitle_profile">Profile</string>
    <string name="str_pageTitle_statistics">Statistics</string>
    <string name="str_menu_settings">Settings</string>
    <string name="str_menu_info">Help</string>
    <string name="str_menu_search">Search</string>
    <string name="str_menu_context_remove">Remove</string>
	<string name="str_menu_refresh">Refresh</string>
	<string name="str_menu_submit_mac">Submit Unknown Mac Address</string>
    <string name="str_menu_working">Working&#8230;</string>
    <string name="str_actBar_userInfo">User Information</string>
    <string name="str_mainActTitle">Blue Hunter</string>
    <string name="str_Toast_adTip">Tip: Clicking on the ad will reward you with a +20% boost for 24hrs.</string>
    <string name="str_Toast_adClick">You got rewarded with +20% boost for clicking the ad.</string>
    <string name="str_discoveryState_running">Discovery running.</string>
    <string name="str_discoveryState_stopped">Discovery stopped.</string>
    <string name="str_discoveryState_btOff">Bluetooth off.</string>
    <string name="str_discoveryState_finished">Reactivating&#8230;</string>
    <string name="str_discoveryState_btEnabling">Enabling Bluetooth&#8230;</string>
    <string name="str_discoveryState_btDisabling">Disabling Bluetooth&#8230;</string>
    <string name="str_discoveryState_error">Discovery error.</string>
    <string name="str_discoveryState_off">Discovery off.</string>
    <string name="str_discovery_devices">Devices:</string>
    <string name="str_discovery_devExpPerDay">Devices / Exp per day:</string>
    <string name="str_discovery_devExpToday">Devices / Exp last 24 hours:</string>
    <string name="str_discovery_devInSession">Current New / Old devices:</string>
    <string name="str_discovery_loading">Loading&#8230;</string>
    <string name="str_discovery_state_old">OLD</string>
    <string name="str_discovery_state_new">NEW</string>
    <string name="str_discovery_nextRank">Next Rank</string>
    <string name="str_discovery_left_remaining">left</string>
    <string name="str_leaderboard_global">Global</string>
    <string name="str_leaderboard_weekly">Weekly</string>
    <string name="str_leaderboard_weeklyTimer" formatted="false">Cycle ends in %1$dd %2$dh %3$dmin and %4$dsec</string>
    <string name="str_leaderboard_rank">Rank</string>
    <string name="str_leaderboard_estimatedExp" formatted="false">Estimated%n%1$s</string>
    <string name="str_enableBT_title">Enable Bluetooth ?</string>
    <string name="str_enableBT_text">This game requires Bluetooth to be enabled in order to run the device discovery and hunting Bluetooth devices. Do you want to enable Bluetooth and allow this application to use Bluetooth for the device discovery ?</string>
    <string name="str_enableBT_yesButton">Yes</string>
    <string name="str_enableBT_noButton">No</string>
    <string name="str_enableBT_remember">Remember choice.</string>
    <string name="str_notification_start">Start Discovery</string>
    <string name="str_notification_pause">Pause Discovery</string>
    <string name="str_PreferenceHeader_info">Info</string>
    <string name="str_PreferenceHeader_info_sum">Show some information about the game.</string>
    <string name="str_PreferenceHeader_behaviour">Behaviour</string>
    <string name="str_PreferenceHeader_behaviour_sum">Manage the device specific behaviour of the game.</string>
    <string name="str_PreferenceHeader_profile">Profile</string>
    <string name="str_PreferenceHeader_profile_sum">Adjust your profile settings. (Online)</string>
    <string name="str_PreferenceHeader_misc">Miscellaneous</string>
    <string name="str_PreferenceHeader_misc_sum">Change misc. settings or clean up the game.</string>
    <string name="str_Preferences_changePass_title">Change Password</string>
    <string name="str_Preferences_changePass_sum">Change your profile password. (Online)</string>
    <string name="str_Preferences_changePass_new_title">Set Password</string>
    <string name="str_Preferences_changePass_new_sum">Set your profile password. (Online)</string>
    <string name="str_Preferences_changePass_success">Successfully changed password.</string>
    <string name="str_Preferences_localPass_title">Login Password</string>
    <string name="str_Preferences_localPass_sum">Set the password used by the game to log in to your profile.</string>
    <string name="str_Preferences_version_title">Version</string>
    <string name="str_Preferences_showChangelog_title">Show Changelog</string>
    <string name="str_Preferences_checkUpdate_title">Automatically check updates</string>
    <string name="str_Preferences_checkUpdate_sum">Check automatically for new available nightly updates.</string>
    <string name="str_Preferences_newUpdateAvailable_title">New update available</string>
    <string name="str_Preferences_newUpdateAvailable_sum">A new update is available. Click here to download the new version.</string>
    <string name="str_Preferences_vibrate_title">Vibrate</string>
    <string name="str_Preferences_vibrate_sum">Vibrate when a new device is found.</string>
    <string name="str_Preferences_showNotification_title">Show Notification</string>
    <string name="str_Preferences_showNotification_sum">Show the current status of discovery, level and exp as notification.</string>
    <string name="str_Preferences_rebuildDB_title">Rebuild database (ALPHA! MAKE BACKUP BEFORE DOING THIS!)</string>
    <string name="str_Preferences_rebuildDB_sum">Rebuild the locale found devices database. Only try this, if you\'re noticing problems and bugs.</string>
    <string name="str_Preferences_activateSync_title">Sync found devices</string>
    <string name="str_Preferences_activateSync_sum">Sync your found devices with online leaderboard.</string>
    <string name="str_Preferences_syncInterval_title">Interval for syncing</string>
    <string name="str_Preferences_syncInterval_sum">Set the interval in which you want sync the data.</string>
    <string name="str_Preferences_forceUpSync_title">Force syncing entire data</string>
    <string name="str_Preferences_forceUpSync_sum">This will override the complete online data with your local data.</string>
    <string name="str_Preferences_forceDownSync_title">Get remote database</string>
    <string name="str_Preferences_forceDownSync_sum">Overrides your local found devices with the ones stored online.</string>
    <string name="str_Preferences_enableBackground_title">Enable Background</string>
    <string name="str_Preferences_enableBackground_sum">Enables background image to be displayed.</string>
    <string name="str_Preferences_deleteRemember_title">Delete remember assignments</string>
    <string name="str_Preferences_deleteRemember_sum">Delete all remember assignments you\'ve made in the app.</string>
    <string name="str_Preferences_disableBtExit_title">Disable Bluetooth on exit</string>
    <string name="str_Preferences_disableBtExit_sum">This will turn off Bluetooth when closing the app.</string>
    <string name="str_Preferences_disableBtSrchOff_title">Disable Bluetooth at discovery stop</string>
    <string name="str_Preferences_disableBtSrchOff_sum">This will turn off Bluetooth when you manually turn off the device discovery.</string>
    <string name="str_Preferences_openIssueTracker_title">Issue Tracker</string>
    <string name="str_Preferences_openIssueTracker_sum">Report bugs, crashes and feature requests here.\nThank you!</string>
    <string name="str_Preferences_showAttentionDialog_title">Show Attention Dialog</string>
    <string name="str_Preferences_showAttentionDialog_sum">Show the attention dialog at app start.</string>
    <string name="str_Preferences_runDiscoveryAfterStart_title">Run discovery after start</string>
    <string name="str_Preferences_runDiscoveryAfterStart_sum">Run discovery every time the app has opened.</string>
    <string name="str_Preferences_serialNumber_title">Serial Number</string>
    <string name="str_Preferences_userID_title">User ID</string>
    <string name="str_Preferences_showAd_title">Show ad</string>
    <string name="str_Preferences_showAd_sum">Show an advertise at the start of the app.</string>
    <string name="str_foundDevices_manu_unkown">Unknown</string>
    <string name="str_foundDevices_exp_abbreviation">Exp</string>
    <string name="str_foundDevices_level">Level</string>
    <string name="str_statistics_editName_apply">Apply</string>
    <string name="str_changePass_title">Change profile password</string>
    <string name="str_changePass_new_title">Set profile password</string>
    <string name="str_changePass_cancelButton">Cancel</string>
    <string name="str_changePass_applyButton">Apply</string>
    <string name="str_changePass_sureButton">Are you sure?</string>
    <string name="str_changePass_oldPass">Enter old password&#8230;</string>
    <string name="str_changePass_newPass">Enter new password&#8230;</string>
    <string name="str_changePass_confirmNewPass">Confirm new password&#8230;</string>
    <string name="str_loginPass_title">Set login password</string>
    <string name="str_auth_newUpdateAvailable" formatted="false">New nightly version available. %n Currently installed build: %1$d. %n Available build: %2$d.</string>
    <string name="str_auth_updated" formatted="false">Updated to new version %s.%n</string>
    <string name="str_auth_updated_1_4_5">Could not retrieve changelog. Possibly not internet connection.</string>
    <string name="str_auth_updated_90">No Changelog available.</string>
    <string name="str_auth_updated_404">Could not retrieve changelog. Possibly server down or changelog script not available.</string>
    <string name="str_auth_updated_500">Could not retrieve changelog. Server error. Please contact developer.</string>
    <string name="str_auth_changelog">Changelog</string>
    <string name="str_auth_loginSuccess">Login was successfully.</string>
    <string name="str_auth_securityMsg">Note: Because of security aspects, you should consider to set a password for the game. You can do that in your profile settings.</string>
    <string name="str_auth_storeTokenFailed">Could not store login token.</string>
    <string name="str_auth_changelog_ok">OK</string>
    <string name="str_tip_leaderboard">Tip: To make you visible in the leaderboard you want to enable the sync feature in the settings.</string>
    <string name="str_tip_changeName">Tip: To change your name just touch the name and hold.</string>
    <string name="str_boostComposition_levelBoost">Level %d boost:</string>
    <string name="str_boostComposition_achievementBoost">Achievement &quot;%s&quot; boost:</string>
    <string name="str_boostComposition_title">Boost Composition</string>
    <string name="str_boostComposition_weeklyBoost">Weekly leaderboard boost for rank %d:</string>
    <string name="str_boostComposition_adBoost">Boost from clicking ad:</string>
    <string name="str_statistics_manufacturerCount_title">Manufacturer Count</string>
    <string name="str_statistics_general_title">General</string>
    <string name="str_achievement_accomplish">Congratulations! You have accomplished the achievement "%s".</string>
    <string name="str_achievement_totalBoost">Boost:\n%s</string>
    <string name="str_achieve_1_title">Probation Period I</string>
    <string name="str_achieve_1_description">Get 100 Exp to become accepted.</string>
    <string name="str_achieve_2_title">Probation Period II</string>
    <string name="str_achieve_2_description">Find 200 devices to know some mac addresses.</string>
</resources>