<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_vibrate"
        android:summary="@string/str_Preferences_vibrate_sum"
        android:title="@string/str_Preferences_vibrate_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_showNotification"
        android:summary="@string/str_Preferences_showNotification_sum"
        android:title="@string/str_Preferences_showNotification_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_enableBackground"
        android:summary="@string/str_Preferences_enableBackground_sum"
        android:title="@string/str_Preferences_enableBackground_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_runDiscoveryAfterStart"
        android:summary="@string/str_Preferences_runDiscoveryAfterStart_sum"
        android:title="@string/str_Preferences_runDiscoveryAfterStart_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_disBtExit"
        android:summary="@string/str_Preferences_disableBtExit_sum"
        android:title="@string/str_Preferences_disableBtExit_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_disBtSrchOff"
        android:summary="@string/str_Preferences_disableBtSrchOff_sum"
        android:title="@string/str_Preferences_disableBtSrchOff_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_showAttentionDialog"
        android:summary="@string/str_Preferences_showAttentionDialog_sum"
        android:title="@string/str_Preferences_showAttentionDialog_title" />

    <Preference
        android:key="pref_deleteRemember"
        android:summary="@string/str_Preferences_deleteRemember_sum"
        android:title="@string/str_Preferences_deleteRemember_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_showAd"
        android:summary="@string/str_Preferences_showAd_sum"
        android:title="@string/str_Preferences_showAd_title" />

</PreferenceScreen>