<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="false"
        android:key="pref_changePass"
        android:summary="@string/str_Preferences_changePass_sum"
        android:title="@string/str_Preferences_changePass_title" />
    <Preference
        android:key="pref_localPass"
        android:summary="@string/str_Preferences_localPass_sum"
        android:title="@string/str_Preferences_localPass_title" />

    <CheckBoxPreference android:key="pref_syncingActivated" android:persistent="true" android:summary="@string/str_Preferences_activateSync_sum" android:title="@string/str_Preferences_activateSync_title"/>
    <Preference android:dependency="pref_syncingActivated" android:key="pref_syncInterval" android:persistent="true" android:summary="@string/str_Preferences_syncInterval_sum" android:title="@string/str_Preferences_syncInterval_title"/>
    <Preference android:dependency="pref_syncingActivated" android:key="pref_forceUpSync" android:summary="@string/str_Preferences_forceUpSync_sum" android:title="@string/str_Preferences_forceUpSync_title"/>
    <Preference android:dependency="pref_syncingActivated" android:key="pref_forceDownSync" android:summary="@string/str_Preferences_forceDownSync_sum" android:title="@string/str_Preferences_forceDownSync_title"/>

</PreferenceScreen>