<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discoveryLLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TableLayout
        android:id="@+id/discoveryInfoTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:padding="@dimen/padding_xsmall"
        android:visibility="visible">

        <TableRow
            android:id="@+id/DDtableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/txt_discoveryState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/nextRankIndicatorTR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-9dp"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/nextRankIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/progress_indicator"
                android:clickable="true"
                android:gravity="center"
                android:text="Next Rank"
                android:textColor="@android:color/white"
                android:textSize="9sp" />

        </TableRow>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:minHeight="1dip"
                android:minWidth="250dip"
                android:progress="35" />

            <TextView
                android:id="@+id/lvlIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="7"
                android:textSize="@dimen/levelIndicator_text"
                android:textStyle="bold" />

        </RelativeLayout>


        <TableRow
            android:id="@+id/DDtableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center">

            <TextView
                android:id="@+id/expIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView" />
        </TableRow>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TableRow
                android:id="@+id/DDTableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:animateLayoutChanges="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="@string/str_discovery_devices"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="100" />

            </TableRow>

            <TableRow
                android:id="@+id/DDtableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/boostTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="@string/str_discovery_devExpPerDay"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devExpPerDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="100" />

            </TableRow>

            <TableRow
                android:id="@+id/DDTableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="@string/str_discovery_devExpToday"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devExpToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="100 /100" />

            </TableRow>

            <TableRow
                android:id="@+id/DDtableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_discovery_devInSession_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="false"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="@string/str_discovery_devInSession"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_discovery_devInSession_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:padding="@dimen/padding_xxsmall"
                    android:text="1" />

            </TableRow>

        </TableLayout>

    </TableLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/discoveryListParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:animateLayoutChanges="true"
        android:background="@color/bg_transparent_grey"
        android:visibility="gone">

        <ListView
            android:id="@+id/discoveryListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:fastScrollEnabled="true"
            android:scrollingCache="true"
            android:visibility="visible"
            tools:listitem="@layout/act_page_discovery_row">

        </ListView>

        <ImageView
            android:id="@+id/expandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:src="@drawable/ic_arrow_drop_up_black_48dp" />

    </RelativeLayout>


</RelativeLayout>